kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: data-platform.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: metabase-svc
            port:
              number: 80
